--- a/fieldguide/templates/index.html
+++ b/fieldguide/templates/index.html
@@ -1,10 +1,11 @@
 {% set content %}
-
+<div class="fieldguide">
     <h1>Field Guide</h1>
 
 	{% include 'fieldguide/_content' %}
+</div>
 
-{% endset %} 
+{% endset %}
 
 {% extends "fieldguide/_layout" %}
 
