--- a/fieldguide/templates/_layout.html
+++ b/fieldguide/templates/_layout.html
@@ -1,6 +1,7 @@
 {% extends '_layouts/cp' %}
 
 {% includeCssResource "fieldguide/styles.css" %}
+{% includeJsResource "fieldguide/fieldguide.js" %}
 
 {% set tabs = {
     dashboard:     { label: "Dashboard"|t, url: url('field-guide/') },
